# team32

./: .gitignore  README.md  conf.py  pyproject.toml
.github/workflows/: coverage.yml  test.yml
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/_sources/: index.rst.txt
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
_build/html/_sources/: index.rst.txt
app/: app.py  examples.py  requirements.txt
docs/: Milestone2.ipynb  README.md  genindex.html  index.html  milestone1.ipynb  milestone1.md  milestone2_progress.md  py-modindex.html  search.html
src/fab_ad/: AD.py  constants.py  fab_ad.py  fab_admath.py  usage.py
tests/fab_ad/: test_fab_ad.py  test_fab_admath.py  test_forward_mode.py
