[tool.poetry]
name = "fab-ad"
version = "0.1.0"
description = "Automatic differentiation package supporting Forward and reverse differentiation"
authors = ["Saket Joshi <saket_joshi@g.harvard.edu> , Nishtha Sardana <>, Nikhil Nayak <>, Sree Harsha Tanneru <>, Kareema Batool <>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "fab_ad"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sphinx = "^5.3.0"
numpydoc = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
